fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -116,6 +116,11 @@
 
 html {
   scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
@@ -123,6 +128,12 @@ body {
   background: var(--background);
   color: var(--foreground);
   overflow-x: hidden;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .text-balance {
